[package]
name = "crashlog"
version = "0.1.5"
description = "Panic handling for humans"
repository = "https://github.com/kdkasad/crashlog"
authors = ["Kian Kasad <kian@kasad.com>"]
license = "Apache-2.0"
categories = ["rust-patterns"]
keywords = ["panic", "crash", "report", "cli"]
edition = "2021"
rust-version = "1.85"
exclude = ["/.github/"]

[dependencies]
chrono = { version = "0.4.41", features = ["now"], default-features = false }
fastrand = "2.3.0"
os_info = { version = "3.11.0", default-features = false }

[dev-dependencies]
pretty_assertions = "1.4.1"
